src/MinhaLinguagemParser.java
// Generated from MinhaLinguagem.g4 by ANTLR 4.8

import java.util.Map;
import java.util.HashMap;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MinhaLinguagemParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, BOLEANO=23, NUMERO=24, 
		TEXTO=25, TIPO=26, ID=27, MAIOR=28, IGUAL=29, MENOR=30, WS=31;
	public static final int
		RULE_conta = 0, RULE_exprId = 1, RULE_exprFor = 2, RULE_para = 3, RULE_simbolos = 4, 
		RULE_exprEnq = 5, RULE_enquanto = 6, RULE_faca = 7, RULE_se = 8, RULE_senao = 9, 
		RULE_programa = 10, RULE_declaracoes = 11, RULE_atribuicao = 12, RULE_comandos = 13, 
		RULE_imprime = 14, RULE_valor = 15, RULE_variavel = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"conta", "exprId", "exprFor", "para", "simbolos", "exprEnq", "enquanto", 
			"faca", "se", "senao", "programa", "declaracoes", "atribuicao", "comandos", 
			"imprime", "valor", "variavel"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'*'", "'/'", "'+'", "'-'", "'('", "')'", "'estiver no range'", 
			"'Para'", "'realize:'", "'Fim para'", "'Enquanto'", "'Fim enquanto'", 
			"'Realize:'", "'Fim realize'", "'Se'", "'Fim se'", "'Senao realize:'", 
			"'Fim senao'", "'Inicio'", "'Fim'", "';'", "'imprime '", null, null, 
			null, null, null, "'>'", "'='", "'<'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "BOLEANO", 
			"NUMERO", "TEXTO", "TIPO", "ID", "MAIOR", "IGUAL", "MENOR", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MinhaLinguagem.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	Map<String, Object> memory = new HashMap<String, Object>();

	public MinhaLinguagemParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ContaContext extends ParserRuleContext {
		public ExprIdContext exprId;
		public TerminalNode NUMERO() { return getToken(MinhaLinguagemParser.NUMERO, 0); }
		public ExprIdContext exprId() {
			return getRuleContext(ExprIdContext.class,0);
		}
		public List<ContaContext> conta() {
			return getRuleContexts(ContaContext.class);
		}
		public ContaContext conta(int i) {
			return getRuleContext(ContaContext.class,i);
		}
		public ContaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conta; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).enterConta(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).exitConta(this);
		}
	}

	public final ContaContext conta() throws RecognitionException {
		return conta(0);
	}

	private ContaContext conta(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ContaContext _localctx = new ContaContext(_ctx, _parentState);
		ContaContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_conta, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMERO:
			case ID:
				{
				setState(39);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NUMERO:
					{
					setState(35);
					match(NUMERO);
					}
					break;
				case ID:
					{
					setState(36);
					((ContaContext)_localctx).exprId = exprId();
					if(memory.get((((ContaContext)_localctx).exprId!=null?_input.getText(((ContaContext)_localctx).exprId.start,((ContaContext)_localctx).exprId.stop):null)) == null){System.err.println("Essa variavel nao existe!");} else if(!(memory.get((((ContaContext)_localctx).exprId!=null?_input.getText(((ContaContext)_localctx).exprId.start,((ContaContext)_localctx).exprId.stop):null)) instanceof Number)){System.err.println("Essa variavel nao e um numero!");}
								
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case T__4:
				{
				setState(41);
				match(T__4);
				setState(42);
				conta(0);
				setState(43);
				match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(55);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(53);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new ContaContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_conta);
						setState(47);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(48);
						_la = _input.LA(1);
						if ( !(_la==T__0 || _la==T__1) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(49);
						conta(5);
						}
						break;
					case 2:
						{
						_localctx = new ContaContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_conta);
						setState(50);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(51);
						_la = _input.LA(1);
						if ( !(_la==T__2 || _la==T__3) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(52);
						conta(4);
						}
						break;
					}
					} 
				}
				setState(57);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExprIdContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MinhaLinguagemParser.ID, 0); }
		public ExprIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).enterExprId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).exitExprId(this);
		}
	}

	public final ExprIdContext exprId() throws RecognitionException {
		ExprIdContext _localctx = new ExprIdContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_exprId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprForContext extends ParserRuleContext {
		public ExprIdContext exprId;
		public List<ExprIdContext> exprId() {
			return getRuleContexts(ExprIdContext.class);
		}
		public ExprIdContext exprId(int i) {
			return getRuleContext(ExprIdContext.class,i);
		}
		public TerminalNode NUMERO() { return getToken(MinhaLinguagemParser.NUMERO, 0); }
		public ExprForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprFor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).enterExprFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).exitExprFor(this);
		}
	}

	public final ExprForContext exprFor() throws RecognitionException {
		ExprForContext _localctx = new ExprForContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_exprFor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(T__4);
			setState(61);
			((ExprForContext)_localctx).exprId = exprId();
			setState(62);
			match(T__6);
			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMERO:
				{
				setState(63);
				match(NUMERO);
				}
				break;
			case ID:
				{
				setState(64);
				((ExprForContext)_localctx).exprId = exprId();
				if(memory.get((((ExprForContext)_localctx).exprId!=null?_input.getText(((ExprForContext)_localctx).exprId.start,((ExprForContext)_localctx).exprId.stop):null)) == null){System.err.println("Essa variavel nao existe!");} else if(!(memory.get((((ExprForContext)_localctx).exprId!=null?_input.getText(((ExprForContext)_localctx).exprId.start,((ExprForContext)_localctx).exprId.stop):null)) instanceof Number)){System.err.println("Essa variavel nao e um numero!");}
							
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(69);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParaContext extends ParserRuleContext {
		public ExprForContext exprFor() {
			return getRuleContext(ExprForContext.class,0);
		}
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public ParaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_para; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).enterPara(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).exitPara(this);
		}
	}

	public final ParaContext para() throws RecognitionException {
		ParaContext _localctx = new ParaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_para);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(T__7);
			setState(72);
			exprFor();
			setState(73);
			match(T__8);
			setState(74);
			comandos();
			setState(75);
			match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimbolosContext extends ParserRuleContext {
		public TerminalNode MAIOR() { return getToken(MinhaLinguagemParser.MAIOR, 0); }
		public List<TerminalNode> IGUAL() { return getTokens(MinhaLinguagemParser.IGUAL); }
		public TerminalNode IGUAL(int i) {
			return getToken(MinhaLinguagemParser.IGUAL, i);
		}
		public TerminalNode MENOR() { return getToken(MinhaLinguagemParser.MENOR, 0); }
		public SimbolosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simbolos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).enterSimbolos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).exitSimbolos(this);
		}
	}

	public final SimbolosContext simbolos() throws RecognitionException {
		SimbolosContext _localctx = new SimbolosContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_simbolos);
		int _la;
		try {
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MAIOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				match(MAIOR);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IGUAL) {
					{
					setState(78);
					match(IGUAL);
					}
				}

				}
				break;
			case IGUAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				match(IGUAL);
				setState(82);
				match(IGUAL);
				}
				break;
			case MENOR:
				enterOuterAlt(_localctx, 3);
				{
				setState(83);
				match(MENOR);
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IGUAL) {
					{
					setState(84);
					match(IGUAL);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprEnqContext extends ParserRuleContext {
		public List<ExprIdContext> exprId() {
			return getRuleContexts(ExprIdContext.class);
		}
		public ExprIdContext exprId(int i) {
			return getRuleContext(ExprIdContext.class,i);
		}
		public SimbolosContext simbolos() {
			return getRuleContext(SimbolosContext.class,0);
		}
		public TerminalNode NUMERO() { return getToken(MinhaLinguagemParser.NUMERO, 0); }
		public ExprEnqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprEnq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).enterExprEnq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).exitExprEnq(this);
		}
	}

	public final ExprEnqContext exprEnq() throws RecognitionException {
		ExprEnqContext _localctx = new ExprEnqContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_exprEnq);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			exprId();
			setState(90);
			simbolos();
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMERO:
				{
				setState(91);
				match(NUMERO);
				}
				break;
			case ID:
				{
				setState(92);
				exprId();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnquantoContext extends ParserRuleContext {
		public ExprEnqContext exprEnq() {
			return getRuleContext(ExprEnqContext.class,0);
		}
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public EnquantoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enquanto; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).enterEnquanto(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).exitEnquanto(this);
		}
	}

	public final EnquantoContext enquanto() throws RecognitionException {
		EnquantoContext _localctx = new EnquantoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_enquanto);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(T__10);
			setState(96);
			exprEnq();
			setState(97);
			match(T__8);
			setState(98);
			comandos();
			setState(99);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FacaContext extends ParserRuleContext {
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public ExprEnqContext exprEnq() {
			return getRuleContext(ExprEnqContext.class,0);
		}
		public FacaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_faca; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).enterFaca(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).exitFaca(this);
		}
	}

	public final FacaContext faca() throws RecognitionException {
		FacaContext _localctx = new FacaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_faca);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(T__12);
			setState(102);
			comandos();
			setState(103);
			match(T__10);
			setState(104);
			exprEnq();
			setState(105);
			match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SeContext extends ParserRuleContext {
		public SimbolosContext simbolos() {
			return getRuleContext(SimbolosContext.class,0);
		}
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public List<VariavelContext> variavel() {
			return getRuleContexts(VariavelContext.class);
		}
		public VariavelContext variavel(int i) {
			return getRuleContext(VariavelContext.class,i);
		}
		public List<ValorContext> valor() {
			return getRuleContexts(ValorContext.class);
		}
		public ValorContext valor(int i) {
			return getRuleContext(ValorContext.class,i);
		}
		public SenaoContext senao() {
			return getRuleContext(SenaoContext.class,0);
		}
		public SeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_se; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).enterSe(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).exitSe(this);
		}
	}

	public final SeContext se() throws RecognitionException {
		SeContext _localctx = new SeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_se);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(T__14);
			setState(110);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TIPO:
				{
				setState(108);
				variavel();
				}
				break;
			case BOLEANO:
			case NUMERO:
			case TEXTO:
				{
				setState(109);
				valor();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(112);
			simbolos();
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TIPO:
				{
				setState(113);
				variavel();
				}
				break;
			case BOLEANO:
			case NUMERO:
			case TEXTO:
				{
				setState(114);
				valor();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(117);
			match(T__8);
			setState(118);
			comandos();
			setState(119);
			match(T__15);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(120);
				senao();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SenaoContext extends ParserRuleContext {
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public SenaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_senao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).enterSenao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).exitSenao(this);
		}
	}

	public final SenaoContext senao() throws RecognitionException {
		SenaoContext _localctx = new SenaoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_senao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(T__16);
			setState(124);
			comandos();
			setState(125);
			match(T__17);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramaContext extends ParserRuleContext {
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public DeclaracoesContext declaracoes() {
			return getRuleContext(DeclaracoesContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(T__18);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TIPO) {
				{
				setState(128);
				declaracoes();
				}
			}

			setState(131);
			comandos();
			setState(132);
			match(T__19);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracoesContext extends ParserRuleContext {
		public ValorContext valor;
		public Token ID;
		public Token TIPO;
		public VariavelContext variavel() {
			return getRuleContext(VariavelContext.class,0);
		}
		public TerminalNode TIPO() { return getToken(MinhaLinguagemParser.TIPO, 0); }
		public TerminalNode IGUAL() { return getToken(MinhaLinguagemParser.IGUAL, 0); }
		public TerminalNode ID() { return getToken(MinhaLinguagemParser.ID, 0); }
		public ValorContext valor() {
			return getRuleContext(ValorContext.class,0);
		}
		public ContaContext conta() {
			return getRuleContext(ContaContext.class,0);
		}
		public DeclaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).enterDeclaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinhaLinguagemListener ) ((MinhaLinguagemListener)listener).exitDeclaracoes(this);
		}
	}

	public final DeclaracoesContext declaracoes() throws RecognitionException {
		DeclaracoesContext _localctx = new DeclaracoesContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_declaracoes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			variavel();
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IGUAL) {
				{
				setState(135);
				match(IGUAL);
				setState(138);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
				case 1:
					{
					setState(136);
					((DeclaracoesContext)_localctx).valor = valor();
					}
					break;
				case 2:
					{
					setState(137);
					conta(0);
					}
					break;
				}
				}
			}

			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(142);
				((DeclaracoesContext)_localctx).ID = match(ID);
				}
			}

			setState(145);
			((DeclaracoesContext)_localctx).TIPO = match(TIPO);

					if ( (((DeclaracoesContext)_localctx).valor!=null?_input.getText(((DeclaracoesContext)_localctx).valor.start,((DeclaracoesContext)_localctx).valor.stop):null) !=null ) {
						if((((DeclaracoesContext)_localctx).TIPO!=null?((DeclaracoesContext)_localctx).TIPO.getText():null) == "NUMERO" && memory.get((((DeclaracoesContext)_localctx).valor!=null?_input.getText(((DeclaracoesContext)_localctx).valor.start,((DeclaracoesContext)_localctx).valor.stop):null)) != null){
							System.err.println("Variavel declarada incorretamente. "+(((DeclaracoesContext)_localctx).ID!=null?((DeclaracoesContext)_localctx).ID.getText():null));
						}else if((((DeclaracoesContext)_localctx).TIPO!=null?((DeclaracoesContext)_localctx).TIPO.getText():null) == "TEXTO" && ((((DeclaracoesContext)_localctx).valor!=null?_input.getText(((DeclaracoesContext)_localctx).valor.start,((DeclaracoesContext)_localctx).valor.stop):null) instanceof String)){
							System.err.println("Variavel declarada incorretamente. "+(((DeclaracoesContext)_localctx).ID!=null?((DeclaracoesContext)_localctx).ID.getText():null));
						}else if((((DeclaracoesContext)_localctx).TIPO!=null?((DeclaracoesContext)_localctx).TIPO.getText():null) == "BOLEANO" && ((((DeclaracoesContext)_localctx).valor!=null?_input.getText(((DeclaracoesContext)_localctx).valor.start,((DeclaracoesContext)_localctx).valor.stop):null) instanceof String)){
							System.err.println("Variavel declarada incorretamente. "+(((DeclaracoesContext)_localctx).ID!=null?((DeclaracoesContext)_localctx).ID.getText():null));
						}
					}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
